2002-06-19  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-headlines.in:
	added timeout on initial connection
	* fvwm-config.in:
	added png and xft reporting

2002-06-17  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-desktop.1:
	some improvements

	* fvwm-perllib.1:
	* fvwm-perllib.in:
	improved documentation and code

2002-06-15  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-headlines.1:
	* fvwm-menu-headlines.in:
	added support for CNN, BBC-World, BBC-SciTech headlines;
	do not show time or/and date fields that can't be guessed
	instead of showing a fake time/date

	* fvwm-perllib.1:
	* fvwm-perllib.in:
	added a new script for perllib documentation

2002-06-09  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-headlines.1:
	* fvwm-menu-headlines.in:
	fix for a bad httpd responce, new option --icon-error

2002-06-02  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-headlines.1:
	* fvwm-menu-headlines.in:
	add timeouts on socket reading (default is 20 seconds) and --timeout;
	updated NewsForge, LinuxFr;
	disabled SegFault, AppWatch, JustLinux, FreeKDE as non-functional

2002-05-28  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-config.in:
	removed multibyte reporting

2002-05-09  olicha  <olivier.chapuis@free.fr>

	* fvwm-root.c (SetRootWindow): 
	A fix

2002-04-25  Mikhael Goikhman  <migo@homemail.com>

	* *.1:
	improved main headers and updated for 2.5.1

	* fvwm-config.in:
	report xrender support

2002-04-23  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-root.c:
	minor reformatting and spell checking

2002-04-22  olicha  <olivier.chapuis@free.fr>

	* fvwm-root.c (*):
	Some renaming.

2002-04-12  Mikhael Goikhman  <migo@homemail.com>

	* *:
	split directory utils/ into 2 directories:
	bin/   - for programs installed into ${bindir}
	utils/ - for developer and miscellaneous utilities

	renamed programs:
	xpmroot        -> fvwm-root
	fvwmbug        -> fvwm-bug
	fvwmrc_convert -> fvwm-convert-2.2
	fvwm24_convert -> fvwm-convert-2.4

	added: