@@ -1,3 +1,8 @@
+2002-06-20  Mikhael Goikhman  <migo@homemail.com>
+
+	* fvwm-root.c:
+	fixed build without xpm; search in built-in image-path first
+
 2002-06-19  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm-menu-headlines.in:
